--- a/assets/css/subv.css
+++ b/assets/css/subv.css
@@ -247,6 +247,15 @@ body {
 	vertical-align: super;
 }
 
+.item-comments .comment {
+	margin-left: 75px;
+}
+
+.item-comments .comment textarea {
+	width: 100%;
+	height: 8em;
+}
+
 /* -------------------------- *
  * MISC
  * -------------------------- */
