--- a/assets/css/subv.css
+++ b/assets/css/subv.css
@@ -167,20 +167,20 @@ body {
 	display: none;
 }
 
-.item-comments div[class|=page-] {
+div[class^=page-] {
 	display: none;
 }
 
-.item-comments.haspage-1 .page-1,
-.item-comments.haspage-2 .page-2,
-.item-comments.haspage-3 .page-3,
-.item-comments.haspage-4 .page-4,
-.item-comments.haspage-5 .page-5,
-.item-comments.haspage-6 .page-6,
-.item-comments.haspage-7 .page-7,
-.item-comments.haspage-8 .page-8,
-.item-comments.haspage-9 .page-9,
-.item-comments.haspage-10 .page-10 {
+.haspage-1 .page-1,
+.haspage-2 .page-2,
+.haspage-3 .page-3,
+.haspage-4 .page-4,
+.haspage-5 .page-5,
+.haspage-6 .page-6,
+.haspage-7 .page-7,
+.haspage-8 .page-8,
+.haspage-9 .page-9,
+.haspage-10 .page-10 {
 	display: block;
 }
 
@@ -432,10 +432,14 @@ body {
 	width: 95%;
 }
 
-.js-show-comment-box {
+.comment-box {
 	width: 100%;
 }
 
 .comment {
 	display: none;
+}
+
+.load-page {
+	width: 100%;
 }
