minor style changes, bug fixes[1], improvements[2]
[1] If width range bar not avail 1st time, use default.
[2] scroll to top after refresh
[3] uses xdomainajax.js.
We are moving into the extension-less mode.

--- a/assets/css/subv.css
+++ b/assets/css/subv.css
@@ -11,6 +11,7 @@ body {
 }
 
 *,
+p,
 input,
 button,
 select,
@@ -86,6 +87,11 @@ textarea {
 
 .footer-tb-more {
 	padding-left: 12px;
+}
+
+#nav,
+.width-tb {
+	padding: 0 1em;
 }
 
 .width-tb-margin {
