Tested & fixed with Fx 11, Opera 11.64[1], IE9.
[1] doT.js on Opera throws exception, but min.js version worked.

--- a/assets/css/subv.css
+++ b/assets/css/subv.css
@@ -2,7 +2,10 @@
  * GLOBAL
  * -------------------------- */
 * {
-	box-sizing/* ftw */: border-box;
+	/* For the Win :*/
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
 }
 
 body {
